# rental-price-mlops-pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  rental_price_prediction_pipeline.yaml  requirements.txt
.github/workflows/: ci.yml  docker-smoke.yml
.ipynb_checkpoints/: main-checkpoint.py
data/: housing_1000.csv
docs/: API.md  DEPLOYMENT.md  PORTFOLIO_EVIDENCE.md  RUNBOOK.md  SYSTEM_DESIGN.md  cli_reference.md  data_contract.md  engineering-runbook.md  lifecycle.md  modeling_notes.md
helm/rental-price-api/: Chart.yaml  values.yaml
helm/rental-price-api/templates/: deployment.yaml  service.yaml  servicemonitor.yaml
kubernetes/argocd/: application.yaml
kubernetes/monitoring/: grafana-dashboard.json  prometheus-rule.yaml
mlflow/: docker-compose.yml
rental_mlops/: __init__.py  artifacts.py  baseline.py  config.py  data.py  drift.py  features.py  metrics.py  model.py  model_card.py  monitoring.py  predict.py  quality.py  registry.py  serving.py
scripts/: validate_platform_layout.py
tests/: test_artifacts_optional.py  test_baseline.py  test_data.py  test_drift.py  test_features.py  test_metrics.py  test_model_optional.py  test_monitoring.py  test_platform_layout.py  test_predict_optional.py  test_quality.py  test_registry.py  test_serving_optional.py
